--- a/cat.html
+++ b/cat.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Hello from catalog</h1>
-    <p>New paragraph</p>
-  </body>
+  <p>First paragraph</p>
+  <p>Second paragraph</p>
+
 </html>
