--- a/cat.html
+++ b/cat.html
@@ -9,8 +9,7 @@
     <h1>Hello from catalog</h1>
   <p>First paragraph</p>
   <p>Second paragraph</p>
-<<<<<<< HEAD
-  <p>My paragraph</p>
+  <p>Third paragraph</p>
 =======
   <h1>Hello from catalog</h1>
   <p>First paragraph</p>
